Add dry run option to workflow_dispatch for release workflow

--- a/.github/workflows/ci_validation.yml
+++ b/.github/workflows/ci_validation.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   ci-script-tests:
-    name: Run ci script tests
+    name: Test ci scripts
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
