--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,10 +54,38 @@ jobs:
         if: failure()
         run: bundle list
 
+  integration:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: [3.3.4, 3.4]
+        jekyll: [3.10.0, 4.3.4, 4.4.0, 4.4.1]
+    name: Integration tests Ruby ${{ matrix.ruby }} / Jekyll ${{ matrix.jekyll }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+
+      - name: Install Bats
+        run: |
+          git clone https://github.com/bats-core/bats-core.git
+          sudo ./bats-core/install.sh /usr/local
+      
+      - name: Run tests
+        run: bats integration
+        env:
+          JEKYLL_VERSION: ${{ matrix.jekyll }}
+
   required-tests:
     name: Check required tests passed
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: [lint, test, integration]
     if: ${{ success() }}  # Only runs if all `needs` succeeded
     
     steps:
