Remove tag trigger (#9)
Add release/draft branch to skip-changelog label (#12)

Fix gem name extraction from release script (#13)

Get gem name outside of build (#17)

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -4,4 +4,4 @@ dependencies: ['deps/*', 'dependencies/*']
 docs: ['docs/*', 'doc/*']
 feature: ['feature/*', 'feat/*', 'new/*']
 maintenance: ['chore/*', 'maint/*', 'noop/*', 'no-op/*', 'dev/*', 'devops/*']
-skip-changelog: ['skip/*']
+skip-changelog: ['skip/*', 'release/draft']
